src/objects/StudentSearchHash__c.object
<CustomObject>
    <description>Lookup Object for Student Accounts by SSN Hash so that SSN need not be exposed in unencrypted fields.</description>
    <fields>
        <fullName>BirthDateHash__c</fullName>
        <description>Hash value for searching</description>
        <externalId>true</externalId>
        <label>BirthDateHash</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNHash__c</fullName>
        <description>Hash value for searching</description>
        <externalId>true</externalId>
        <label>SSNHash</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNLastFour__c</fullName>
        <description>Last four digits of SSN for searching</description>
        <externalId>true</externalId>
        <label>SSNLastFour</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Student&apos;s Account Record</description>
        <label>StudentAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>StudentSearcheHashes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student Contact related field</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Search Hashes</relationshipLabel>
        <relationshipName>StudentSearchHashes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Search Hash</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Search Hashes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>